force-app/main/default/objects/DigitSecFinding__c/DigitSecFinding__c.object-meta.xml
<CustomObject>
    <label>DigitSecFinding</label>
    <nameField>
        <label>DigitSecFinding Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DigitSecFindings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>