force-app/main/default/objects/DigitSecFinding__c/fields/DigitSecResult__c.field-meta.xml
<CustomField>
    <fullName>DigitSecResult__c</fullName>
    <label>DigitSecResult</label>
    <referenceTo>copado__Result__c</referenceTo>
    <relationshipLabel>DigitSecFindings</relationshipLabel>
    <relationshipName>DigitSecFindings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>