force-app/main/default/objects/DigitSecFinding__c/fields/Exploit__c.field-meta.xml
<CustomField>
    <fullName>Exploit__c</fullName>
    <label>Exploit</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>