force-app/main/default/objects/DigitSecFinding__c/fields/Remediation__c.field-meta.xml
<CustomField>
    <fullName>Remediation__c</fullName>
    <label>Remediation</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>