force-app/main/default/objects/DigitSecFinding__c/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <label>Severity</label>
    <type>TextArea</type>
</CustomField>