force-app/main/default/objects/DigitSecFinding__c/fields/Vulnerability_Trace__c.field-meta.xml
<CustomField>
    <fullName>Vulnerability_Trace__c</fullName>
    <label>Vulnerability_Trace</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>